[package]
name = "aoc-utils"
version = "0.4.2"
authors = ["Marcin Puc <marcin.e.puc@gmail.com>"]
edition = "2021"
description = "A minimal set of utils for writing Advent of Code solutions"
readme = "README.md"
repository = "https://github.com/tranzystorek-io/aoc-utils"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", default-features = false, features = ["std"] }
elapsed = "0.1"
