[package]
name = "aoc-utils"
version = "0.5.0"
authors = ["Marcin Puc <tranzystorek.io@protonmail.com>"]
edition = "2021"
description = "A minimal set of utils for writing Advent of Code solutions"
readme = "README.md"
repository = "https://github.com/tranzystorek-io/aoc-utils"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", default-features = false, features = ["std", "help", "usage", "error-context"] }
